--- a/products.html
+++ b/products.html
@@ -357,7 +357,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                       <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
+                                            <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
                                         </div>
                                     </div>
                                     <a href="#" class="border-btn border-btn2">PRODUCTS</a>
@@ -389,7 +389,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                       <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
+                                            <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
                                         </div>
                                     </div>
                                     <a href="#" class="border-btn border-btn2">PRODUCTS</a>
@@ -422,7 +422,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                       <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
+                                            <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
                                         </div>
                                     </div>
                                     <a href="#" class="border-btn border-btn2">PRODUCTS</a>
@@ -458,7 +458,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                       <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
+                                            <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
                                         </div>
                                     </div>
                                     <a href="#" class="border-btn border-btn2">PRODUCTS</a>
@@ -490,7 +490,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                       <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
+                                            <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
                                         </div>
                                     </div>
                                     <a href="#" class="border-btn border-btn2">PRODUCTS</a>
@@ -523,7 +523,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                       <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
+                                            <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
                                         </div>
                                     </div>
                                     <a href="#" class="border-btn border-btn2">PRODUCTS</a>
@@ -559,7 +559,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                       <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
+                                            <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
                                         </div>
                                     </div>
                                     <a href="#" class="border-btn border-btn2">PRODUCTS</a>
@@ -591,7 +591,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                       <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
+                                            <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
                                         </div>
                                     </div>
                                     <a href="#" class="border-btn border-btn2">PRODUCTS</a>
@@ -624,7 +624,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                       <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
+                                            <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
                                         </div>
                                     </div>
                                     <a href="#" class="border-btn border-btn2">PRODUCTS</a>
@@ -660,7 +660,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                       <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
+                                            <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
                                         </div>
                                     </div>
                                     <a href="#" class="border-btn border-btn2">PRODUCTS</a>
@@ -692,7 +692,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                       <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
+                                            <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
                                         </div>
                                     </div>
                                     <a href="#" class="border-btn border-btn2">PRODUCTS</a>
@@ -725,7 +725,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                       <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
+                                            <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
                                         </div>
                                     </div>
                                     <a href="#" class="border-btn border-btn2">PRODUCTS</a>
