--- a/products.html
+++ b/products.html
@@ -360,7 +360,7 @@
                                             <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
                                         </div>
                                     </div>
-                                    <!-- <!-- <a href="#" class="border-btn border-btn2">PRODUCTS</a> --> -->
+                                     <!-- <a href="#" class="border-btn border-btn2">PRODUCTS</a> --> 
                                 </div>
                             </div>
                         </div>
