--- a/services.html
+++ b/services.html
@@ -355,9 +355,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                       <div class="price">
+                                            <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                        </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -387,9 +387,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                       <div class="price">
+                                            <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                        </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -420,9 +420,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                       <div class="price">
+                                            <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                        </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -456,9 +456,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                       <div class="price">
+                                            <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                        </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -488,9 +488,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                       <div class="price">
+                                            <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                        </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -521,9 +521,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                       <div class="price">
+                                            <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                        </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -557,9 +557,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                       <div class="price">
+                                            <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                        </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -589,9 +589,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                       <div class="price">
+                                            <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                        </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -622,9 +622,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                       <div class="price">
+                                            <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                        </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -658,9 +658,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                       <div class="price">
+                                            <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                        </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -690,9 +690,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                       <div class="price">
+                                            <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                        </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -723,9 +723,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                       <div class="price">
+                                            <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                        </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
