--- a/arabic_products.html
+++ b/arabic_products.html
@@ -73,6 +73,13 @@
                                                         <li><a href="english_exams.html">ENGLISH EXAMINATIONS</a></li>
                                                     </ul>
                                                 </li>
+                                                <li><a href="services.html">SERVICES</a>
+                                                    <ul class="submenu">
+                                                        <li><a href="services.html">MAANDEEQ SERVICES</a></li>
+                                                        <li><a href="arabic_services.html">ARABIC SERVICES</a></li>
+                                                        <li><a href="english_services.html">ENGLISH SERVICES</a></li>
+                                                    </ul>
+                                                </li>
                                                 <li><a href="services.html">PRODUCTS</a>
                                                     <ul class="submenu">
                                                         <li><a href="services.html">MAANDEEQ SUBCRIPTIONS</a></li>
