--- a/arabic_services.html
+++ b/arabic_services.html
@@ -354,9 +354,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                        <div class="price">
+                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                        </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -386,9 +386,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                        <div class="price">
+                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                        </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -419,9 +419,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                        <div class="price">
+                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                        </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -455,9 +455,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                        <div class="price">
+                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                        </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -487,9 +487,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                        <div class="price">
+                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                        </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -520,9 +520,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                        <div class="price">
+                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                        </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -556,9 +556,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                        <div class="price">
+                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                        </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -588,9 +588,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                        <div class="price">
+                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                        </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -621,9 +621,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                        <div class="price">
+                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                        </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -657,9 +657,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                        <div class="price">
+                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                        </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -689,9 +689,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                        <div class="price">
+                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                        </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -722,9 +722,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                        <div class="price">
+                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                        </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
